<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:orientation="vertical"

    android:background="#FFF"
    android:id="@+id/TableLayout"
    android:stretchColumns="1,2,3"
    android:focusable="false"
    android:longClickable="false"
    >

    <TableRow
        android:id="@+id/T1">
        android:layout_width="match_parent">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/labelIngrese_Pago"
            android:id="@+id/Ingrese_Pago" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/EditText_Ingrese_Pago"
            android:text="@string/txt_Cero"
            android:textColor="#000"
            android:inputType="numberDecimal"
            android:gravity="center"
            android:layout_weight="1"/>
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/T6">
        <TextView />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/P10"
            android:id="@+id/p10" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/P15"
            android:id="@+id/p15" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/P20"
            android:id="@+id/p20" />
        </TableRow>




    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/T2">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/labelpropina"
            android:id="@+id/propina" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/EditText_propina10"
            android:text="@string/txt_Cero"
            android:textColor="#000"
            android:inputType="numberDecimal"
            android:gravity="center"
            android:layout_weight="1"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/EditText_propina15"
            android:text="@string/txt_Cero"
            android:textColor="#000"
            android:inputType="numberDecimal"
            android:gravity="center"
            android:layout_weight="1"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/EditText_propina20"
            android:text="@string/txt_Cero"
            android:textColor="#000"
            android:inputType="numberDecimal"
            android:gravity="center"
            android:layout_weight="1"/>
    </TableRow>




    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/T3">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/labelTotal"
            android:id="@+id/total" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/EditText_total10"
            android:text="@string/txt_Cero"
            android:textColor="#000"
            android:inputType="numberDecimal"
            android:gravity="center"
            android:layout_weight="1"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/EditText_total15"
            android:text="@string/txt_Cero"
            android:textColor="#000"
            android:inputType="numberDecimal"
            android:gravity="center"
            android:layout_weight="1"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/EditText_total20"
            android:text="@string/txt_Cero"
            android:textColor="#000"
            android:inputType="numberDecimal"
            android:gravity="center"
            android:layout_weight="1"/>

        </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/TextView_18_1">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/labelcustom"
            android:id="@+id/custom" />

        <SeekBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/barra"

            android:layout_span="2"
            android:paddingRight="8dp"
            android:focusable="true"
            android:progress="20"
            android:layout_weight="1"
            android:indeterminate="false" />
        <TextView
            android:id="@+id/TextView_18"
            android:text="@string/label20"
            android:textSize="14sp"
            android:gravity="center"
            android:layout_weight="1"/>

    </TableRow>


     />


    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/T5">

        <TextView
            android:id="@+id/propinaT"
            android:text="@string/labelpropina"
            android:textSize="14sp"
            android:gravity="center"
            android:layout_weight="1"/>
<EditText
    android:id="@+id/EditTextPropina_final"
    android:text="@string/txtT1"
        android:textSize="14sp"/>

        <TextView
            android:id="@+id/lblTotal"
            android:text="@string/labelTotal"
            android:textSize="14sp"
            android:gravity="center"
            android:layout_weight="1"/>
        <EditText
            android:id="@+id/EditText_Total_Total"
            android:text="@string/txtT2"
            android:textSize="14sp"/>

        </TableRow>


</TableLayout>
